docs: fix contrast issues in docs (#1904)
And discard invalid documents

--- a/docs/components/SearchDrawer/styles.less
+++ b/docs/components/SearchDrawer/styles.less
@@ -36,13 +36,13 @@
   list-style: none;
   padding: 0;
   a {
-    color: #575757;
+    color: var(--rs-text-primary);
     padding: 10px 6px;
     display: block;
     font-size: 14px;
     text-decoration: none;
     &:hover {
-      background: var(--rs-primary-50);
+      text-decoration: underline;
     }
     em {
       color: var(--rs-primary-500);
@@ -51,7 +51,7 @@
     }
     p {
       margin-top: 10px;
-      color: #999;
+      color: var(--rs-text-primary);
       font-size: 12px;
     }
   }
